--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,6 +11,8 @@ on:
      - 'main'
   workflow_dispatch:
 
+env:
+  MAVIN_CODE_PATH: ./mavin
 defaults:
   run: 
     shell: bash
@@ -62,9 +64,34 @@ jobs:
         with:
           sarif_file: ${{ env.OUTPUTFILE }}
   #
-  testing:
+  construction:
     runs-on: ubuntu-latest
     needs: [ scanning-trivy, scanning-snyk ]
+    steps:
+      ## ---------------------------------------------------
+      - name: Checkout code
+        uses: actions/checkout@v3
+      ## ---------------------------------------------------
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      ## ---------------------------------------------------
+      - name: Build with Maven
+        run: |
+          cd ${{ env.MAVIN_CODE_PATH }}
+          mvn -B package --file pom.xml
+     ## ---------------------------------------------------
+     # improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+  #
+  testing:
+    runs-on: ubuntu-latest
+    needs: [ construction ]
     #
     steps:
       ## ---------------------------------------------------
