--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -66,7 +66,7 @@ jobs:
   #
   construction:
     runs-on: ubuntu-latest
-    needs: [ scanning-trivy, scanning-snyk ]
+    needs: [ scanning-trivy ]
     steps:
       ## ---------------------------------------------------
       - name: Checkout code
