--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -9,10 +9,12 @@ on:
   push:
    branches-ignore:
      - 'main'
+     - 'dependabot/*'
   workflow_dispatch:
 
 env:
   MAVIN_CODE_PATH: ./mavin
+
 defaults:
   run: 
     shell: bash
