--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  MAVIN_CODE_PATH: ./mavin
+  MAVIN_CODE_PATH: ./maven
 
 defaults:
   run: 
@@ -74,7 +74,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       ## ---------------------------------------------------
-      - name: Set up JDK 11
+      - name: Java Development Kit setup
         uses: actions/setup-java@v3
         with:
           java-version: '11'
@@ -84,7 +84,7 @@ jobs:
       - name: Build with Maven
         run: |
           cd ${{ env.MAVIN_CODE_PATH }}
-          mvn -B package --file pom.xml
+          mvn --batch-mode package --file pom.xml
      ## ---------------------------------------------------
      # improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
@@ -100,6 +100,32 @@ jobs:
       ## ---------------------------------------------------
       - name: Checkout code
         uses: actions/checkout@v3
+        
+  publish:
+    if: github.ref_name == 'development'
+    permissions:
+      contents: read
+      packages: write
+    runs-on: ubuntu-latest
+    needs: [ testing ]
+    #
+    steps: 
+      ## ---------------------------------------------------
+      - name: Checkout code
+        uses: actions/checkout@v3
+      ## ---------------------------------------------------
+      - name: Java Development Kit setup
+        uses: actions/setup-java@v3
+        with:
+          java-version: '19'
+          distribution: 'temurin'
+          cache: maven
+      ## ---------------------------------------------------
+      - name: Publish Package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn --batch-mode deploy
+        
   #
   pull-request:
     permissions:
