--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -14,6 +14,16 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub Packages</name>
+          <!--+
+              | <url>https://maven.pkg.github.com/OWNER/REPO</url>
+              +-->
+        </repository>
+    </distributionManagement>
+
     <dependencies>
       <dependency>
         <groupId>junit</groupId>
