--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -85,14 +85,14 @@ jobs:
       ## ---------------------------------------------------
       - name: Build with Maven
         run: |
-          cd ${{ env.MAVIN_CODE_PATH }}
+          cd ${{ env.MAVEN_CODE_PATH }}
           mvn --batch-mode package --file pom.xml
      ## ---------------------------------------------------
      # improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
         with:
-          directory: ${{ env.MAVIN_CODE_PATH }}
+          directory: ${{ env.MAVEN_CODE_PATH }}
   #
   testing:
     runs-on: ubuntu-latest
@@ -128,7 +128,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd ${{ env.MAVIN_CODE_PATH }}
+          cd ${{ env.MAVEN_CODE_PATH }}
           mvn --batch-mode deploy -DaltDeploymentRepository=${{ env.MAVEN_SERVER_ID }}::default::${{ env.MAVEN_REGISTRY_URL }}/${{ github.repository }} 
   pull-request:
     permissions:
