--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -13,8 +13,9 @@ on:
   workflow_dispatch:
 
 env:
-  MAVIN_CODE_PATH: ./maven
-  MAVIN_REGISTRY_URL: https://maven.pkg.github.com
+  MAVEN_CODE_PATH: ./maven
+  MAVEN_SERVER_ID: github
+  MAVEN_REGISTRY_URL: https://maven.pkg.github.com
 
 defaults:
   run: 
@@ -84,14 +85,14 @@ jobs:
       ## ---------------------------------------------------
       - name: Build with Maven
         run: |
-          cd ${{ env.MAVIN_CODE_PATH }}
+          cd ${{ env.MAVEN_CODE_PATH }}
           mvn --batch-mode package --file pom.xml
      ## ---------------------------------------------------
      # improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
         with:
-          directory: ${{ env.MAVIN_CODE_PATH }}
+          directory: ${{ env.MAVEN_CODE_PATH }}
   #
   testing:
     runs-on: ubuntu-latest
@@ -121,13 +122,15 @@ jobs:
           java-version: '19'
           distribution: 'temurin'
           cache: maven
+          server-id: ${{ env.MAVEN_SERVER_ID }}
       ## ---------------------------------------------------
       - name: Publish Package
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd ${{ env.MAVIN_CODE_PATH }}
-          mvn --batch-mode deploy -DaltDeploymentRepository=${{ env.MAVIN_REGISTRY_URL }}/${{ github.repository }} 
+          cd ${{ env.MAVEN_CODE_PATH }}
+          mvn --batch-mode deploy -DaltDeploymentRepository=${{ env.MAVEN_SERVER_ID }}::default::${{ env.MAVEN_REGISTRY_URL }}/${{ github.repository }} 
+  #
   pull-request:
     permissions:
       contents: write
