--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -126,6 +126,7 @@ jobs:
       ## ---------------------------------------------------
       - name: Version
         id: releaseVersion
+        if: github.ref_name == 'development'
         uses: anothrNick/github-tag-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -134,6 +135,8 @@ jobs:
           PRERELEASE: true
       ## ---------------------------------------------------
       - name: Publish Package
+        id: publish
+        if: ${{ steps.releaseVersion.outputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
