--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.davekpatrick.acmecorporation</groupId>
-    <artifactId>Anvil</artifactId>
+    <artifactId>anvil</artifactId>
     <packaging>jar</packaging>
     <version>$(version)</version>
     <properties>
