--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -154,7 +154,7 @@ jobs:
           cd ${{ env.MAVEN_CODE_PATH }}
           mvn versions:set -DnewVersion=${{ steps.releaseVersion.outputs.tag }}
           mvn --batch-mode deploy -DaltDeploymentRepository=${{ env.MAVEN_SERVER_ID }}::default::${{ env.MAVEN_REGISTRY_URL }}/${{ github.repository }} 
-  pull-request:
+  pull-to-dev:
     if: github.ref_name != 'development'
     permissions:
       contents: write
