--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       contents: read
       packages: write
     runs-on: ubuntu-latest
-    needs: [ testing ]
+    needs: [ preparation ]
     #
     steps: 
       ## ---------------------------------------------------
