--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ on:
 # Relative paths will be under the $GITHUB_WORKSPACE directory
 env:
   MAVIN_CODE_PATH: ./maven
-
+  MAVEN_SERVER_ID: github
+  MAVEN_REGISTRY_URL: https://maven.pkg.github.com
+  
 defaults:
   run: 
     shell: bash
