--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
   #
   release:
     permissions:
-      contents: read
+      contents: write
       packages: write
     runs-on: ubuntu-latest
     needs: [ preparation ]
@@ -76,7 +76,7 @@ jobs:
         with:
           artifacts: "${{ env.MAVEN_CODE_PATH }}/target/*.jar"
           generateReleaseNotes: true
-          tag: ${{ steps.releaseVersion.outputs.tag }}
+          tag: "v${{ steps.releaseVersion.outputs.tag }}"
   #
   deployment:
     runs-on: ubuntu-latest
